# conlang

./: .gitignore  README.md  aliases  phonotactics.py  proto-testa-mundi.new-form.properties  proto-testa-mundi.properties  proto-testa-mundi.v1.yaml  proto-testa-mundi.v2.yaml  pyproject.toml  pyrightconfig.json  setup.zsh  word-gen  wordgen.py  wordgenconfig.py
src/: phonotactics.py  wordgen.py  wordgenconfig.py
tests/: pytest.ini  test-config.yaml  test-rando-mundi.v1.yaml  wordgen_test.py  wordgenconfig_test.py
